# EventGift

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  log.txt
Server/database/: eventgift.db
Server/src/: Bootstrap.cpp  Bootstrap.h  CommandLine.cpp  CommandLine.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseManager.hpp  Logger.cpp  Logger.h  Logger.hpp  Server.cpp  Time.cpp  Time.h
src/: App.cpp  App.h  App.hpp  ClientServer.cpp  ClientServer.h  ClientServer.hpp  Event.cpp  Event.hpp  EventData.hpp  EventGift.cpp  Logger.cpp  Logger.hpp  ServerClient.cpp  ServerClient.h  SessionManager.cpp  SessionManager.hpp  Time.cpp  Time.hpp
src/ui/: CreateEventWindow.cpp  CreateEventWindow.h  CreateEventWindow.hpp  CreateEventWindow.ui  EventWindow.cpp  EventWindow.hpp  EventWindow.ui  GiftEOWidget.cpp  GiftEOWidget.hpp  GiftEOWidget.ui  GiftEWidget.cpp  GiftEWidget.hpp  GiftEWidget.ui  GiftWidget.cpp  GiftWidget.h  GiftWidget.hpp  GiftWidget.ui  InviteGateway.cpp  InviteGateway.h  InviteGateway.hpp  InviteGateway.ui  Login.cpp  Login.h  Login.hpp  Login.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MemberWidget.cpp  MemberWidget.hpp  MemberWidget.ui  Register.cpp  Register.h  Register.ui  StartMenu.cpp  StartMenu.h  StartMenu.ui  UserWidget.cpp  UserWidget.hpp  UserWidget.ui
